--- a/css/cssManager.css
+++ b/css/cssManager.css
@@ -2,5 +2,9 @@
 @import url(./header.css);
 @import url(./title.css);
 @import url(./aside.css);
-@import url(./mypage.css);
+@import url(./suggest.css);
 @import url(./filter.css);
+@import url(./map.css);
+@import url(./footer.css);
+@import url(./bottomSide.css);
+@import url(./mobile.css);
