--- a/css/header.css
+++ b/css/header.css
@@ -2,9 +2,12 @@
     width: 100%;
     height: 110px;
 
-    position: fixed;
+    position: absolute;
     display: flex;
     justify-content: center;
+}
+#m_hd{
+    display: none;
 }
 #header h1{
    width: 120px;
@@ -13,7 +16,8 @@
     position: absolute;
     left: calc(100vw * (185 / 1920));
     top: 25%;
-    background-image: url(../image/main/logo.png);
+    background-image: url(../image/main/logo_white.png);
+    z-index: 999;
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
@@ -21,20 +25,24 @@
 #gnb{
     width: 100%;
     height: 80px;
-
+    position: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: background-color 0.5s ease; 
+    z-index: 999;
 }
-#gnb ul{
+
+#gnb > ul {
     width: calc(100vw * (680 / 1920));
     height: 20px;
-
     display: flex;
     justify-content: space-between;
     align-items: center;
+    line-height: 20px;
 
-    font-family: "GS";
+
+    
     text-transform: uppercase;
 }
 /* @media screen and (max-size: 1440px) {
@@ -50,7 +58,11 @@
         text-transform: uppercase;
     }
 } */
-#gnb ul li a{
+#gnb > ul > li {
+    position: relative;
+    display: block;
+}
+#gnb > ul > li > a{
     width: fit-content;
     height: fit-content;
 
@@ -79,11 +91,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
 }
 #snb ul li{
     width: 100%;
     height: fit-content;
-
     padding-left: 30%;
     
     background-position: left center;
@@ -94,7 +106,7 @@
     background-image: url(../image/main/home.png);
 }
 #snb ul li:nth-of-type(2){
-     background-image: url(../image/main/shopping.png);
+     background-image: url(../image/main/User.png);
  }
  #snb ul li:nth-of-type(3){
      background-image: url(../image/main/Bookmark.png);
@@ -113,6 +125,47 @@
     text-align: left;
 
     color: white;
-    font-family: "GS";
+    
     font-size: calc(100vw * (20 / 1920));
 }
+.blur {
+    backdrop-filter: blur(5px);
+    background-color:rgba(0, 0, 0, 0.3); 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); 
+}
+#gnb.blur .subMenu {
+    backdrop-filter: blur(5px);
+    background-color:rgba(134, 134, 134, 0.6); 
+    box-shadow: 0 2px 5px rgba(134, 134, 134, 0.5); 
+}
+.subMenu { 
+    display: none;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    width: 100%;
+    white-space: nowrap;
+    z-index: 998;
+}
+.subMenu li {
+    text-align: center;
+    padding-top: 10px;
+}
+.subMenu li a {
+    color: white;
+   
+}
+#gnb > ul > li:hover > .subMenu {
+    display: block;
+}
+#gnb > ul > li:hover { 
+    border-bottom: 1px solid #FF005C;
+}
+#gnb > ul > li:hover .subMenu:hover {
+    display: block;
+}
+.subMenu-wrapper {
+    backdrop-filter: blur(5px);
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
