--- a/css/title.css
+++ b/css/title.css
@@ -24,7 +24,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    font-family: "GS";
     font-size: calc(100vw * (40 / 1920));
 }
 #titleWrap dl dt{
@@ -32,13 +31,14 @@
 }
 #titleWrap dl dd{
     color: white;
+    
 }
 #titleWrap dl dd:nth-of-type(2) {
     width: calc(100vw * (500 / 1920));
     height: calc(100vw * (45 / 1920));
 
     position: relative;
-    
+    margin-top: calc(100vw * (-200/1920));
     border-radius: calc(100vw * (45 / 1920));
     line-height: 0;
 
@@ -53,17 +53,20 @@
     border-radius: calc(100vw * (45 / 1920));
     border: 1px solid #FF005C;
     color: #FF005C;
-
+    padding-left: calc(100vw * (10/1920));
+    padding-top: calc(100vw * (5/1920));
     
 }
 
 
-#titleWrap dl dd img { border: 1px solid #000; }
+#titleWrap dl dd img {
+    border: 1px solid #000;
+}
 
 #titleWrap dl dd .placeholder .input_txt{
     margin-top: calc(-1 * (100vw * (24 / 1920)));
     padding-left: 5%;
-
+    
     font-family: "GMar";
     font-size: calc(100vw * (20 / 1920));
     color: #FF005C;
