--- a/gong_css/gong.css
+++ b/gong_css/gong.css
@@ -1,4 +1,5 @@
 @import url(../css/common.css);
 @import url(./gong_header.css);
+@import url(./gong._footer.css);
 @import url(./gong_main.css);
-@import url(./gong_footer.css);
+@import url(../css/aside.css);
